@startuml

hide empty members

abstract class Board <<sealed>>
Board <|-- BoardRun
Board <|-- BoardWin
Board <|-- BoardDraw

Game *--> "?" Board: board
Game -> Player : firstPlayer

enum Player {
    X,O
}

class Position {
    index: Int
}

<> Moves
Board *-> "*" Moves : "moves"
Position <-down- Moves : key
Moves -> Player : value
BoardRun -up-> Player : "turn       "
BoardWin -up-> Player : winner

<> Score
Game *--> "3..*" Score : score
Score --> Int : value
Score -> "?" Player : key
@enduml